--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "axios": "^0.21.1",
     "cors": "^2.8.5",
     "express": "^4.17.1",
+    "firebase-admin": "^9.4.2",
     "form-data": "^3.0.0",
     "morgan": "^1.10.0",
     "multer": "^1.4.2"
